# cmd/main.go
@@ -2,6 +2,8 @@ package main
 
 import (
 	"flag"
+	"fmt"
+	"github.com/Abdulmueez337/EmployeeManagementSystemProject/client"
 	"github.com/Abdulmueez337/EmployeeManagementSystemProject/gen/restapi"
 	"github.com/Abdulmueez337/EmployeeManagementSystemProject/gen/restapi/operations"
 	"github.com/Abdulmueez337/EmployeeManagementSystemProject/handler"
@@ -31,6 +33,22 @@ func main() {
 	api.AdminDeleteEmployeeHandler = handler.DeleteEmployee()
 	api.EmployeeShowEmployeeSelfHandler = handler.ShowEmployeeSelf()
 	api.TeamLeadShowEmployeeTeamHandler = handler.ShowEmployeeTeamLead()
+	//Verify token from the login api
+	api.BearerAuth = func(token string) (interface{}, error) {
+
+		authClient := client.NewTokenBaseClient()
+		authresponse := (*client.TokenBaseClient).GetValidate(authClient, token)
+		if authresponse == 200 {
+			fmt.Println("Token is valid")
+			return api, nil
+		} else if authresponse == 400 {
+			fmt.Println("Invalid Token")
+			return api, nil
+		} else {
+			fmt.Println("Token > INTERNAL SERVER ERROR")
+			return api, nil
+		}
+	}
 	if err := server.Serve(); err != nil {
 		log.Fatalln(err)
 	}
