# handler/deleteEmployee.go
@@ -16,9 +16,10 @@ func DeleteEmployee() admin.DeleteEmployeeHandler {
 }
 
 //Handle call delete details service layer function
-func (e *deleteEmployee) Handle(params admin.DeleteEmployeeParams) middleware.Responder {
+func (e *deleteEmployee) Handle(params admin.DeleteEmployeeParams, i interface{}) middleware.Responder {
+	tokenAuth := params.HTTPRequest.Header.Get("Authorization")
 	//Call service layer
-	result, err := service.DeleteDetails(params.UserID, swag.StringValue(params.Body.JobType))
+	result, err := service.DeleteDetails(params.UserID, swag.StringValue(params.Body.JobType),tokenAuth)
 	if err != nil {
 		fmt.Errorf("INTERNAL SERVER ERROR FOUND: %s", err)
 		return admin.NewDeleteEmployeeInternalServerError().WithPayload("Internal Server Error")
@@ -26,7 +27,9 @@ func (e *deleteEmployee) Handle(params admin.DeleteEmployeeParams) middleware.Re
 		return admin.NewDeleteEmployeeUnauthorized().WithPayload("Not Authorized")
 	} else if result == 404 {
 		return admin.NewDeleteEmployeeNotFound().WithPayload("Employee Not Exist")
-	} else {
+	} else if result == 200{
 		return admin.NewDeleteEmployeeOK().WithPayload("Successfully Deleted")
+	}else {
+		return admin.NewAddEmployeeInternalServerError()
 	}
 }
