# handler/showEmployeeAdmin.go
@@ -15,9 +15,10 @@ func ShowEmployeeAdmin() admin.ShowEmployeeHandler {
 }
 
 //Handle call show details to admin service function
-func (e *showEmployeeAdmin) Handle(params admin.ShowEmployeeParams) middleware.Responder {
+func (e *showEmployeeAdmin) Handle(params admin.ShowEmployeeParams, i interface{}) middleware.Responder {
+	tokenAuth := params.HTTPRequest.Header.Get("Authorization")
 	//Call service layer
-	employee, result, err := service.ShowDetailsAdmin(params.UserID)
+	employee, result, err := service.ShowDetailsAdmin(params.UserID,tokenAuth)
 	if err != nil {
 		fmt.Errorf("INTERNAL SERVER ERROR: %s", err)
 		return admin.NewShowEmployeeInternalServerError().WithPayload("Internal Server Error")
@@ -25,7 +26,9 @@ func (e *showEmployeeAdmin) Handle(params admin.ShowEmployeeParams) middleware.R
 		return admin.NewShowEmployeeUnauthorized().WithPayload("Not Authorized")
 	} else if result == 404 {
 		return admin.NewShowEmployeeNotFound().WithPayload("Employee not Exist")
-	} else {
+	} else  if result == 200{
 		return admin.NewShowEmployeeOK().WithPayload(toEmployeeGen(employee))
+	}else {
+		return admin.NewShowEmployeeInternalServerError()
 	}
 }
