# swagger.yaml
@@ -4,11 +4,20 @@ info:
   version: "1.0.0"
   title: "Employee Managemnt System"
   contact:
-    email: "abdul.mueez@wanclouds.net"
-host: "ems.swagger.io"
+    email: "abdulmueez@wanclouds.net"
+host: "localhost:3050"
 basePath: "/v1"
+securityDefinitions:
+  Bearer:
+    type: apiKey
+    name: Authorization
+    in: header
 schemes:
   - "http"
+consumes:
+  - "application/json"
+produces:
+  - "application/json"
 paths:
   /admin/add:
     post:
@@ -18,6 +27,8 @@ paths:
       operationId: "addEmployee"
       produces:
         - "application/json"
+      security:
+        - Bearer: []
       parameters:
         - in: "body"
           name: "body"
@@ -43,6 +54,8 @@ paths:
       operationId: "updateEmployee"
       produces:
         - "application/json"
+      security:
+        - Bearer: []
       parameters:
         - name: "user_id"
           in: "path"
@@ -82,6 +95,8 @@ paths:
       operationId: "deleteEmployee"
       produces:
         - "application/json"
+      security:
+        - Bearer: []
       parameters:
         - name: "user_id"
           in: "path"
@@ -122,6 +137,8 @@ paths:
       operationId: "showEmployee"
       produces:
         - "application/json"
+      security:
+        - Bearer: []
       parameters:
         - name: "user_id"
           in: "path"
@@ -157,6 +174,8 @@ paths:
       operationId: "showEmployeeSelf"
       produces:
         - "application/json"
+      security:
+        - Bearer: []
       parameters:
         - name: "user_id"
           in: "path"
@@ -192,6 +211,8 @@ paths:
       operationId: "showEmployeeTeam"
       produces:
         - "application/json"
+      security:
+        - Bearer: []
       parameters:
         - name: "user_id"
           in: "path"
